# hestia_cpp_examples

./: CMakeLists.txt
include/first_soc/applications/: loop_application.h  simple_application.h
include/first_soc/components/: functional_processor.h  memory_bound_processor.h  performant_processor.h  pipelined_processor.h
include/first_soc/functional/: functional_processor_library.h
include/first_soc/functional/transactions/: instruction.h  isa.h
include/first_soc/observers/: doorbell.h
include/first_soc/timing_devices/: pipeline_stage.h
include/shared/components/: number_consumer.h  number_producer.h
src/: CMakeLists.txt
src/basic/: CMakeLists.txt  main.cpp
src/basic_python/: CMakeLists.txt  main.cpp
src/first_soc/: CMakeLists.txt  main.cpp  python_test_bench.cpp
src/first_soc/applications/: CMakeLists.txt  loop_application.cpp  simple_application.cpp
src/first_soc/components/: CMakeLists.txt  functional_processor.cpp  memory_bound_processor.cpp  performant_processor.cpp  pipelined_processor.cpp
src/first_soc/functional/: CMakeLists.txt  functional_processor_library.cpp
src/first_soc/functional/transactions/: instruction.cpp  isa.cpp
